--- a/esmvaltool/recipes/recipe_ocean_Landschutzer2016.yml
+++ b/esmvaltool/recipes/recipe_ocean_Landschutzer2016.yml
@@ -62,14 +62,17 @@ diagnostics:
     variables:
       dpco2:
         preprocessor: prep_global_Surface_average_timeseries_2D
+        field: TO2M
         mip: Omon
         fx_files: [areacello, ]
       spco2:
         preprocessor: prep_global_Surface_average_timeseries_2D
+        field: TO2M
         mip: Omon
         fx_files: [areacello, ]
       fgco2:
         preprocessor: prep_global_Surface_average_timeseries_2D
+        field: TO2M
         mip: Omon
         fx_files: [areacello, ]
     additional_datasets:
@@ -88,18 +91,21 @@ diagnostics:
     variables:
       dpco2:
         preprocessor: prep_surface_map_2D
+        field: TO2M
         mip: Omon
         fx_files: [areacello, ]
         maps_range: [-90., 90.]
         diff_range: [-50., 50.]
       spco2:
         preprocessor: prep_surface_map_2D
+        field: TO2M
         mip: Omon
         fx_files: [areacello, ]
         maps_range: [300., 400.]
         diff_range: [-50., 50.]
       fgco2:
         preprocessor: prep_surface_map_2D
+        field: TO2M
         mip: Omon
         fx_files: [areacello, ]
         maps_range: [-0.2, 0.2]
