--- a/environment.yml
+++ b/environment.yml
@@ -34,3 +34,4 @@ dependencies:
   - jasper!=1.900.31  # pinned NCL dependency
   - r-base
   - libunwind  # Needed for Python3.7+
+  # - julia>=1.0.0  # The Julia package on conda is apparently broken
