--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
       - checkout
       - run:
           command: |
-            apt update && apt -y install build-essential gfortran julia
+            apt update && apt -y install build-essential gfortran
             # Create a file to checksum as cache key
             date --rfc-3339 date > cache_key.txt
             cat environment.yml >> cache_key.txt
@@ -55,12 +55,16 @@ jobs:
             mkdir /logs
             # Install
             apt update > /logs/apt.txt 2>&1
-            apt -y install build-essential gfortran julia >> /logs/apt.txt 2>&1
+            apt -y install build-essential gfortran >> /logs/apt.txt 2>&1
+            wget https://julialang-s3.julialang.org/bin/linux/x64/1.0/julia-1.0.3-linux-x86_64.tar.gz
+            tar xfz julia-*-linux-x86_64.tar.gz
+            ln -s $(pwd)/julia-*/bin/julia /usr/bin/julia
             conda update -y conda > /logs/conda.txt 2>&1
             conda env update >> /logs/conda.txt 2>&1
             set +x; conda activate esmvaltool; set -x
             pip install . > /logs/install.txt 2>&1
-            Rscript ./esmvaltool/install/R/setup.R > /logs/R_install.txt 2>&1
+            Rscript esmvaltool/install/R/setup.R > /logs/R_install.txt 2>&1
+            julia esmvaltool/install/Julia/setup.jl > /logs/julia_install.txt 2>&1
             # Log versions
             dpkg -l > /logs/versions.txt
             conda env export > /logs/environment.yml
@@ -78,6 +82,7 @@ jobs:
           key: python3-install-{{ .Branch }}
           paths:
             - "/opt/conda/pkgs"
+            - ".eggs"
       - store_artifacts:
           path: /logs
       - store_artifacts:
@@ -104,7 +109,7 @@ jobs:
             mkdir /logs
             # Install
             apt update > /logs/apt.txt 2>&1
-            apt -y install build-essential gfortran julia >> /logs/apt.txt 2>&1
+            apt -y install build-essential gfortran >> /logs/apt.txt 2>&1
             conda update -y conda > /logs/conda.txt 2>&1
             conda env update >> /logs/conda.txt 2>&1
             set +x; conda activate esmvaltool; set -x
@@ -136,7 +141,7 @@ jobs:
             mkdir /logs
             # Install
             apt update > /logs/apt.txt 2>&1
-            apt -y install build-essential gfortran julia >> /logs/apt.txt 2>&1
+            apt -y install build-essential gfortran >> /logs/apt.txt 2>&1
             conda update -y conda > /logs/conda.txt 2>&1
             conda env update >> /logs/conda.txt 2>&1
             set +x; conda activate esmvaltool; set -x
@@ -164,7 +169,7 @@ jobs:
             # Install prerequisites
             mkdir /logs
             apt update > /logs/apt.txt 2>&1
-            apt -y install build-essential gfortran julia >> /logs/apt.txt 2>&1
+            apt -y install build-essential gfortran >> /logs/apt.txt 2>&1
             conda update -y conda > /logs/conda_base.txt 2>&1
             conda install -y conda-build conda-verify >> /logs/conda_base.txt 2>&1
             # Log versions
@@ -194,7 +199,7 @@ jobs:
             # Install prerequisites
             mkdir /logs
             apt update > /logs/apt.txt 2>&1
-            apt -y install build-essential gfortran julia >> /logs/apt.txt 2>&1
+            apt -y install build-essential gfortran >> /logs/apt.txt 2>&1
             conda update -y conda > /logs/conda.txt 2>&1
             # Create and activate conda environment
             conda create -y --name esmvaltool
@@ -222,7 +227,7 @@ jobs:
             mkdir /logs
             # Install
             apt update > /logs/apt.txt 2>&1
-            apt -y install build-essential gfortran julia >> /logs/apt.txt 2>&1
+            apt -y install build-essential gfortran >> /logs/apt.txt 2>&1
             conda update -y conda > /logs/conda.txt 2>&1
             conda create -y --name ncl > /logs/conda.txt 2>&1
             set +x; conda activate ncl; set -x
