--- a/esmvaltool/config-BM.yml
+++ b/esmvaltool/config-BM.yml
@@ -2,13 +2,15 @@
 # User's configuration file for the ESMValTool
 ###############################################################################
 ---
+# ESMValTool User's configuration file for LMU Desktop
+# Author: Ben Mueller - LMU
 
 # Diagnostics create plots? [true]/false
 write_plots: true
 # Diagnositcs write NetCDF files? [true]/false
 write_netcdf: true
 # Set the console log level debug, [info], warning, error
-log_level: info
+log_level: debug
 # verbosity is deprecated and will be removed in the future
 # verbosity: 1
 # Exit on warning? true/[false]
