--- a/esmvaltool/recipes/recipe_C3S_511_SPQB.yml
+++ b/esmvaltool/recipes/recipe_C3S_511_SPQB.yml
@@ -53,25 +53,85 @@ diagnostics:
 #        field: T3Ms
         mip: Amon
     scripts:
-      SPQB_basic_report:
-        script: qualassess/DUMMY_C3S_511_SPQB.py
-        data_colors: RdYlGn
-#        levels: [30000.]
-        show_latex: no_latex   
-               #options are: True/False/no_latex
+      diagnostics:
+  SPQB:
+    description: Single product quality brief.
+    variables:
+      ta:
+#      xch4:
+        preprocessor: noop
+#        field: T2Ms
+        field: T3Ms
+        derive: False
+        mip: Amon
+    scripts:
+      diag_O_info:
+        script: qualassess/ta_C3S_511_SPQB.py
+        requests: [info, GCOS]
 
-        
-#  diagnostic1:
-#    description: Multi-product quality brief.
-#    variables:
-#      additional_datasets:
-#        - {dataset: ATSR,  project: obs4mips,  level: L3,  version: ARC-v1.1.1,  start_year: 2001,  end_year: 2003, tier: 3}
-#      ta:
-#        preprocessor: noop
-#        field: T3Ms
-#    scripts:
-#      script0:
-#        script: qualassess/DUMMY_C3S_511_MPQB.py
-#        data_colors: RdYlGn
-#        levels: [30000.,10000.]
-#        show_latex: False
+#      diag_O_avail:
+#        script: qualassess/ta_C3S_511_SPQB.py
+#        requests: [availability]
+#        levels: [3.00e+04,8.50e+04,1.00e+02]
+
+#      diag_O_hist:
+#        script: qualassess/ta_C3S_511_SPQB.py
+#        requests: [histogram]
+#        levels: [3.00e+04,8.50e+04,1.00e+02]
+
+#      diag_MV_ts:
+#        script: qualassess/ta_C3S_511_SPQB.py
+#        requests: [time_series]
+#        levels: [3.00e+04,8.50e+04,1.00e+02]
+
+      diag_MV_mean:
+        script: qualassess/ta_C3S_511_SPQB.py
+        requests: [mean]
+#        levels: [3.00e+04,8.50e+04,1.00e+02]
+
+#      diag_MV_std_dev:
+#        script: qualassess/ta_C3S_511_SPQB.py
+#        requests: [std_dev]
+#        levels: [3.00e+04,8.50e+04,1.00e+02]
+
+#      diag_MV_perc:
+#        script: qualassess/ta_C3S_511_SPQB.py
+#        requests: [percentiles]
+#        levels: [3.00e+04,8.50e+04,1.00e+02]
+
+#      diag_MV_clim:
+#        script: qualassess/ta_C3S_511_SPQB.py
+#        requests: [climatology]
+#        levels: [3.00e+04,8.50e+04,1.00e+02]
+
+#      diag_MV_anom:
+#        script: qualassess/ta_C3S_511_SPQB.py
+#        requests: [anomalies]
+#        levels: [3.00e+04,8.50e+04,1.00e+02]
+
+#      diag_T_trend:
+#        script: qualassess/ta_C3S_511_SPQB.py
+#        requests: [lintrend]
+#        levels: [3.00e+04,8.50e+04,1.00e+02]
+
+#      diag_custom:
+#        script: qualassess/ta_C3S_511_SPQB.py
+#        requests: [custom]
+#        levels: [3.00e+04,8.50e+04,1.00e+02]
+
+      diag_tables:
+        script: qualassess/ta_C3S_511_SPQB.py
+#        requests: [SMM, GCOS, ESM]
+        requests: [SMM, ESM]
+
+      report:
+        script: qualassess/ta_C3S_511_SPQB.py
+        ancestors: ['ta', '*/diag_*']
+        requests: [report]
+#        order: [diag_O_info, diag_tables, diag_O_hist, diag_O_avail,
+#                diag_MV_ts, diag_MV_mean, diag_MV_std_dev, diag_MV_perc, 
+#                diag_MV_clim, diag_MV_anom, diag_T_trend, diag_custom]
+#        order: [diag_tables, diag_MV_ts, diag_MV_mean ,diag_MV_std_dev, diag_MV_clim, diag_MV_anom, diag_custom]
+        order: [diag_O_info, diag_tables, diag_MV_mean]
+#        order: [diag_MV_ts, iag_MV_mean, diag_MV_std_dev]
+        show_latex: False #options are: True/False/no_latex
