--- a/esmvaltool/recipes/recipe_C3S_511_SPQB.yml
+++ b/esmvaltool/recipes/recipe_C3S_511_SPQB.yml
@@ -43,89 +43,77 @@ preprocessors:
 
 diagnostics:
   SPQB:
-    description: Single product quality brief.
+    description: Single product quality brief for C3S_511.
+    
     variables:
-#      ta:
       xch4:
         preprocessor: noop
         field: T2Ms
-#        field: T3Ms
         mip: Amon
-    scripts:
-      diagnostics:
-  SPQB:
-    description: Single product quality brief.
-    variables:
-      ta:
-#      xch4:
-        preprocessor: noop
-#        field: T2Ms
-        field: T3Ms
-        derive: False
-        mip: Amon
+        
     scripts:
       diag_O_info:
-        script: qualassess/ta_C3S_511_SPQB.py
+        script: qualassess/DUMMY_C3S_511_SPQB.py
         requests: [info, GCOS]
 
 #      diag_O_avail:
-#        script: qualassess/ta_C3S_511_SPQB.py
+#        script: qualassess/DUMMY_C3S_511_SPQB.py
 #        requests: [availability]
 #        levels: [3.00e+04,8.50e+04,1.00e+02]
 
 #      diag_O_hist:
-#        script: qualassess/ta_C3S_511_SPQB.py
+#        script: qualassess/DUMMY_C3S_511_SPQB.py
 #        requests: [histogram]
 #        levels: [3.00e+04,8.50e+04,1.00e+02]
 
 #      diag_MV_ts:
-#        script: qualassess/ta_C3S_511_SPQB.py
+#        script: qualassess/DUMMY_C3S_511_SPQB.py
 #        requests: [time_series]
 #        levels: [3.00e+04,8.50e+04,1.00e+02]
 
       diag_MV_mean:
-        script: qualassess/ta_C3S_511_SPQB.py
+        script: qualassess/DUMMY_C3S_511_SPQB.py
         requests: [mean]
 #        levels: [3.00e+04,8.50e+04,1.00e+02]
 
 #      diag_MV_std_dev:
-#        script: qualassess/ta_C3S_511_SPQB.py
+#        script: qualassess/DUMMY_C3S_511_SPQB.py
 #        requests: [std_dev]
 #        levels: [3.00e+04,8.50e+04,1.00e+02]
 
 #      diag_MV_perc:
-#        script: qualassess/ta_C3S_511_SPQB.py
+#        script: qualassess/DUMMY_C3S_511_SPQB.py
 #        requests: [percentiles]
 #        levels: [3.00e+04,8.50e+04,1.00e+02]
 
 #      diag_MV_clim:
-#        script: qualassess/ta_C3S_511_SPQB.py
+#        script: qualassess/DUMMY_C3S_511_SPQB.py
 #        requests: [climatology]
 #        levels: [3.00e+04,8.50e+04,1.00e+02]
 
 #      diag_MV_anom:
-#        script: qualassess/ta_C3S_511_SPQB.py
+#        script: qualassess/DUMMY_C3S_511_SPQB.py
 #        requests: [anomalies]
 #        levels: [3.00e+04,8.50e+04,1.00e+02]
 
 #      diag_T_trend:
-#        script: qualassess/ta_C3S_511_SPQB.py
+#        script: qualassess/DUMMY_C3S_511_SPQB.py
 #        requests: [lintrend]
 #        levels: [3.00e+04,8.50e+04,1.00e+02]
 
 #      diag_custom:
-#        script: qualassess/ta_C3S_511_SPQB.py
+#        script: qualassess/DUMMY_C3S_511_SPQB.py
 #        requests: [custom]
 #        levels: [3.00e+04,8.50e+04,1.00e+02]
 
       diag_tables:
-        script: qualassess/ta_C3S_511_SPQB.py
+        script: qualassess/DUMMY_C3S_511_SPQB.py
 #        requests: [SMM, GCOS, ESM]
         requests: [SMM, ESM]
 
       report:
-        script: qualassess/ta_C3S_511_SPQB.py
-        ancestors: ['ta', '*/diag_*']
+        script: qualassess/DUMMY_C3S_511_SPQB.py
+        ancestors: ['xch4', '*/diag_*']
         requests: [report]
 #        order: [diag_O_info, diag_tables, diag_O_hist, diag_O_avail,
 #                diag_MV_ts, diag_MV_mean, diag_MV_std_dev, diag_MV_perc, 
