set for diagnostic development

--- a/esmvaltool/recipes/recipe_C3S_511_SPQB_experiments.yml
+++ b/esmvaltool/recipes/recipe_C3S_511_SPQB_experiments.yml
@@ -105,7 +105,7 @@ diagnostics:
 #        order: [diag_tables, diag_MV_ts, diag_MV_mean ,diag_MV_std_dev, diag_MV_clim, diag_MV_anom, diag_custom]
 #        order: [diag_tables, diag_MV_mean]
 #        order: [diag_MV_ts, iag_MV_mean, diag_MV_std_dev]
-        show_latex: False #options are: True/False/no_latex
+#        show_latex: False #options are: True/False/no_latex
         
 #  diagnostic1:
 #    description: Multi-product quality brief.
