Fix mip in example recipe

--- a/esmvaltool/recipes/examples/recipe_check_obs.yml
+++ b/esmvaltool/recipes/examples/recipe_check_obs.yml
@@ -444,7 +444,7 @@ diagnostics:
         mip: Amon
       hfds:
         preproc: nopp
-        mip: Amon
+        mip: Omon
       hus:
         preproc: nopp
         mip: Amon
