Fix CircleCI configuration

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
       - checkout
       - run:
           command: |
-            apt update && apt -y install build-essential gfortran julia
+            apt update && apt -y install build-essential gfortran
             # Create a file to checksum as cache key
             date --rfc-3339 date > cache_key.txt
             cat environment.yml >> cache_key.txt
@@ -141,7 +141,7 @@ jobs:
             mkdir /logs
             # Install
             apt update > /logs/apt.txt 2>&1
-            apt -y install build-essential gfortran julia >> /logs/apt.txt 2>&1
+            apt -y install build-essential gfortran >> /logs/apt.txt 2>&1
             conda update -y conda > /logs/conda.txt 2>&1
             conda env update >> /logs/conda.txt 2>&1
             set +x; conda activate esmvaltool; set -x
@@ -233,7 +233,7 @@ jobs:
             mkdir /logs
             # Install
             apt update > /logs/apt.txt 2>&1
-            apt -y install build-essential gfortran julia >> /logs/apt.txt 2>&1
+            apt -y install build-essential gfortran >> /logs/apt.txt 2>&1
             conda update -y conda > /logs/conda.txt 2>&1
             conda create -y --name ncl > /logs/conda.txt 2>&1
             set +x; conda activate ncl; set -x
