Modify name to account for special character \"u

--- a/esmvaltool/utils/cmorizers/obs/cmor_config/Landschuetzer2016.yml
+++ b/esmvaltool/utils/cmorizers/obs/cmor_config/Landschuetzer2016.yml
@@ -1,7 +1,7 @@
 ---
 # project at hand
 proj:
-  dataset: 'Landschutzer2016'
+  dataset: 'Landschuetzer2016'
   version: 'v2016'
   realm: 'clim'
   frequency: {
